--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ git = "https://github.com/gtk-rs/gdk"
 [dependencies.gtk]
 git = "https://github.com/gtk-rs/gtk"
 
+[dependencies.pangocairo]
+git = "https://github.com/gtk-rs/pangocairo"
+
 [features]
 #default = ["gtk_3_22_30"]
 gtk_3_18 = ["gtk/v3_18", "gdk-pixbuf/v2_32", "gdk/v3_18", "gio/v2_46", "glib/v2_46", "pango/v1_38"] #for CI tools
@@ -153,3 +156,6 @@ name = "list_store"
 
 [[bin]]
 name = "entry_completion"
+
+[[bin]]
+name = "printing"
