--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,11 @@ name = "glib"
 lazy_static = "1.2"
 libc = "0.2"
 bitflags = "1.0"
-futures-preview = { version = "0.3.0-alpha", optional = true }
+futures-core = "0.3"
+futures-task = "0.3"
+futures-executor = "0.3"
+futures-util = "0.3"
+futures-channel = "0.3"
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 
@@ -41,8 +45,7 @@ v2_54 = ["v2_52", "glib-sys/v2_54", "gobject-sys/v2_54"]
 v2_56 = ["v2_54", "glib-sys/v2_56"]
 v2_58 = ["v2_56", "glib-sys/v2_58"]
 v2_60 = ["v2_58", "glib-sys/v2_60"]
-futures = ["futures-preview"]
-dox = ["glib-sys/dox", "gobject-sys/dox", "futures"]
+dox = ["glib-sys/dox", "gobject-sys/dox"]
 
 [package.metadata.docs.rs]
 features = ["dox"]
