--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ lazy_static = "1.0"
 futures-core = "0.3"
 futures-channel = "0.3"
 futures-util = "0.3"
+futures-io = "0.3"
 fragile = "0.3"
 gio-sys = { git = "https://github.com/gtk-rs/sys" }
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
