glib: KeyFile::get_string() can return a string in error case that still has to be freed
If it's an invalid UTF-8 string for example we still get it returned but
should simply free it. We can't return it as a String in any way.

Fixes https://github.com/gtk-rs/glib/issues/543

--- a/Gir.toml
+++ b/Gir.toml
@@ -447,6 +447,22 @@ status = "generate"
        name = "get_boolean_list"
        #boolean array needs to be converted to Vec<bool>
        ignore = true
+       [[object.function]]
+       name = "get_string"
+       # can return an error but still a value to be freed
+       ignore = true
+       [[object.function]]
+       name = "get_string_list"
+       # can return an error but still a value to be freed
+       ignore = true
+       [[object.function]]
+       name = "get_locale_string"
+       # can return an error but still a value to be freed
+       ignore = true
+       [[object.function]]
+       name = "get_locale_string_list"
+       # can return an error but still a value to be freed
+       ignore = true
 
 [[object]]
 name = "GLib.DateTime"
