pangocairo: Make FontMap::set_default() a static function and allow passing None as it's nullable
Fixes https://github.com/gtk-rs/pangocairo/issues/60

--- a/Gir.toml
+++ b/Gir.toml
@@ -114,3 +114,6 @@ manual_traits = ["FontMapExtManual"]
     [[object.function]]
     name = "new"
     ignore = true
+    [[object.function]]
+    name = "set_default"
+    ignore = true
