--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ travis-ci = { repository = "gtk-rs/glib" }
 name = "glib"
 
 [dependencies]
-lazy_static = "1.2"
+once_cell = "1.0"
 libc = "0.2"
 bitflags = "1.0"
 futures-core = "0.3"
