--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ git = "https://github.com/gtk-rs/lgpl-docs"
 [dependencies]
 libc = "0.2"
 bitflags = "1.0"
-lazy_static = "1.0"
+once_cell = "1.0"
 futures-core = "0.3"
 futures-channel = "0.3"
 futures-util = "0.3"
