--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ addons:
     packages:
     - libgtk-3-dev
     - libmount-dev
+    - python3
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2; fi
@@ -91,6 +92,7 @@ script:
     PKG_CONFIG_ALLOW_CROSS=1 cargo build --features "$FEATURES" $OTHER_TARGET;
     fi
   - rustc --version
+  - python3 clone_tests/clone_compilation_errors.py
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
   - if [ "$GTK" == "3.96" ]; then
