glib: add genum-derive crate
This crate provides a proc derive macro implementing all the
boilerplate needed to define GEnum properties.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ futures-util = "0.3"
 futures-channel = "0.3"
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
+glib-macros = { path = "glib-macros" }
 
 [dev-dependencies]
 tempfile = "3"
