--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,9 @@ name = "grid"
 name = "gtktest"
 
 [[bin]]
+name = "iconview_example"
+
+[[bin]]
 name = "listbox_model"
 required-features = ["gtk/v3_16", "gio/v2_44"]
 
