gio: No DesktopAppInfo on maxos, fix UnixMountxx version

--- a/Gir.toml
+++ b/Gir.toml
@@ -329,7 +329,7 @@ status = "generate"
 [[object]]
 name = "Gio.DesktopAppInfo"
 status = "generate"
-cfg_condition = "not(windows)"
+cfg_condition = "all(not(windows),not(target_os = \"macos\"))"
     [[object.function]]
     name = "search"
     # returns vec of string
@@ -817,6 +817,7 @@ manual_traits = ["UnixInputStreamExtManual"]
 [[object]]
 name = "Gio.UnixMountEntry"
 status = "generate"
+version = "2.54"
 cfg_condition = "unix"
     [[object.derive]]
     name = "Debug"
@@ -825,6 +826,7 @@ cfg_condition = "unix"
 name = "Gio.UnixMountPoint"
 status = "generate"
 use_boxed_functions = true
+version = "2.54"
 cfg_condition = "unix"
     [[object.derive]]
     name = "Debug"
