cairo: Use thiserror crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ git = "https://github.com/gtk-rs/sys"
 [dependencies]
 libc = "0.2"
 bitflags = "1.0"
+thiserror = "1.0.10"
 
 [dev-dependencies]
 tempfile = "3.0"
