gio: Ignore DataInputStream::read_line_utf8() too and implement manually together with non-UTF8 variants and async variants
The non-UTF8 variants have to return a Vec<u8>, the UTF8 ones can return
an Option<GString>. In either case, don't return the length to the
caller as it's already part of the return value anyway and simply
redudant.

--- a/Gir.toml
+++ b/Gir.toml
@@ -315,10 +315,16 @@ status = "generate"
 
 [[object]]
 name = "Gio.DataInputStream"
+manual_traits = ["DataInputStreamExtManual"]
 status = "generate"
     [[object.function]]
     name = "read_line"
     #return vec of u8
+    ignore = true
+
+    [[object.function]]
+    name = "read_line_utf8"
+    #redudant length returned
     ignore = true
 
     [[object.function]]
