--- a/.travis.yml
+++ b/.travis.yml
@@ -102,3 +102,9 @@ script:
     fi
   - cd _examples;
   - ./build_travis.sh;
+  - if [ "$TRAVIS_RUST_VERSION" == "stable" ] && [ "$GTK" == "3.14" ]; then
+      cd ..;
+      git clone https://github.com/gtk-rs/checker;
+      cd checker && cargo build --release;
+      cd .. && ./checker/target/release/checker .;
+    fi
