--- a/glib-macros/Cargo.toml
+++ b/glib-macros/Cargo.toml
@@ -23,5 +23,5 @@ syn = "1.0"
 proc-macro = true
 
 [dev-dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { path = ".." }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
