gio: Gir: glib::VariantDict is now available
Signed-off-by: Daniel Silverstone <dsilvers@digital-scurf.org>

--- a/Gir.toml
+++ b/Gir.toml
@@ -154,6 +154,7 @@ manual = [
     "GLib.SpawnFlags",
     "GLib.TimeVal",
     "GLib.Variant",
+    "GLib.VariantDict",
     "GLib.VariantType",
     "GObject.Object",
     "GObject.Value",
