--- a/.travis.yml
+++ b/.travis.yml
@@ -53,3 +53,7 @@ script:
       cd checker && cargo build --release;
       cd .. && ./checker/target/release/checker .;
     fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_RUST_VERSION" == "stable"] && [ "$GTK" == "3.24" ]; then
+      rustup component add clippy;
+      cargo clippy --features "$FEATURES,embed-lgpl-docs" --tests -- -D warnings;
+    fi
