--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,17 @@ addons:
     packages:
     - libgtk-3-dev
     - libmount-dev
+    - openbox
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk+3 cairo atk; fi
+
+before_script:
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      openbox &
+    fi
 
 script:
   - rustc --version
