--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ git = "https://github.com/gtk-rs/lgpl-docs"
 libc = "0.2"
 bitflags = "1.0"
 once_cell = "1.0"
+futures = "0.3"
 futures-core = "0.3"
 futures-channel = "0.3"
 futures-util = "0.3"
@@ -55,6 +56,7 @@ gio-sys = { git = "https://github.com/gtk-rs/sys" }
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 glib = { git = "https://github.com/gtk-rs/glib" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
+thiserror = "1"
 
 [dev-dependencies]
 gir-format-check = "^0.1"
