--- a/.travis.yml
+++ b/.travis.yml
@@ -21,17 +21,12 @@ addons:
     packages:
     - libgtk-3-dev
     - libmount-dev
-    - openbox
+    - xvfb
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk+3 cairo atk; fi
-
-before_script:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      openbox &
-    fi
 
 script:
   - rustc --version
@@ -40,7 +35,7 @@ script:
       make regen_check;
     fi
   - cargo doc --features "dox,embed-lgpl-docs"
-  - cargo test --features "$FEATURES,embed-lgpl-docs"
+  - xvfb-run cargo test --features "$FEATURES,embed-lgpl-docs"
   # catch any sneaked in lgpl docs
   - cargo build --features "$FEATURES,purge-lgpl-docs" --jobs 1
   - git diff -R --exit-code
