gdk: Run tests on Windows only on 64 bits
The 32 bit GTK setup on appveyor is broken and fails with
"STATUS_ENTRYPOINT_NOT_FOUND".

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,8 +17,8 @@ install:
 
 build_script:
   - cargo doc --features "dox"
-  - cargo test
-  - cargo test --features v3_24
+  - IF "%BITS%" == "64" cargo test
+  - IF "%BITS%" == "64" cargo test --features v3_24
   - cargo doc --features "dox"
   - mkdir .cargo
   - echo paths = ["."] > .cargo\config
