glib: Ignore g_variant_get_gtype()
It should be used by a StaticType impl, which we have, and not be
available as a standalone function.

--- a/Gir.toml
+++ b/Gir.toml
@@ -432,6 +432,10 @@ status = "generate"
     pattern = "POLLFD_FORMAT"
     #for C printf
     ignore = true
+    [[object.function]]
+    name = "variant_get_gtype"
+    # get_type() function that should be used in StaticType impl instead
+    ignore = true
 
 [[object]]
 name = "GLib.Checksum"
