--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ use_glib = ["glib", "glib-sys", "gobject-sys", "cairo-sys-rs/use_glib"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 v1_14 = ["cairo-sys-rs/v1_14"]
 v1_16 = ["v1_14", "cairo-sys-rs/v1_16"]
-default = ["use_glib"]
+default = ["use_glib", "freetype"]
+freetype = ["cairo-sys-rs/freetype"]
 xcb = ["cairo-sys-rs/xcb"]
 xlib = ["cairo-sys-rs/xlib"]
 dox = ["cairo-sys-rs/dox", "glib/dox"]
